--- a/src/assets/vue2-simple-calendar.css
+++ b/src/assets/vue2-simple-calendar.css
@@ -58,6 +58,13 @@
     border-right: 1px solid #e0e0e0;
     border-bottom: 1px solid #e0e0e0;
   }
+  .week-day:focus {
+    background-color: #d4dcec;
+  }
+  .week-day:hover {
+    background-color: #d4dcec;
+    cursor: pointer;
+  }
   .week-day.disabled {
     background-color: #f5f5f5;
   }
@@ -69,19 +76,21 @@
     color: red;
   }
   .events {
-    font-size: 12px;
+    font-size: 16px;
     cursor: pointer;
     padding: 0 0 0 4px;
   }
   .events .event {
-    height: 18px;
-    line-height: 18px;
+    height: 21px;
+    line-height: 21px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     margin: 0 4px 2px 0;
     color: rgba(0, 0, 0, 0.87);
     background-color: #d4dcec;
+    border-radius: 25px;
+
   }
   .events .more-link {
     color: rgba(0, 0, 0, 0.38);
